<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
     android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".Setting">

    <CheckBox
        android:id="@+id/cost_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cost_price"
        android:layout_margin="20dp"
         android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/selling_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selling_price"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />



    <CheckBox
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/expire"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expire"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/batch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batch"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:checked="true"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />



</LinearLayout>