<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".itemDetails">




<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/item_name"
    android:textSize="20sp"
    android:gravity="center"
    android:textStyle="bold"
    android:id="@+id/item_name"
    android:textColor="@color/colorPrimary"
    />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_unit"
         android:id="@+id/item_unit"
        android:gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_id"
         android:id="@+id/item_id"
        android:gravity="center"
        />
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="20dp"
        android:background="@color/colorPrimary"
        android:id="@+id/card"
        android:elevation="50dp"
        android:layout_height="wrap_content">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
     android:id="@+id/desc"/>
    </android.support.v7.widget.CardView>
    <LinearLayout
         android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="20dp"
            android:background="@color/colorPrimary"
            android:elevation="50dp"
             android:id="@+id/costCard"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                 android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_price"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:id="@+id/cost_price"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            card_view:cardUseCompatPadding="true"
            card_view:cardCornerRadius="20dp"
            android:background="@color/colorPrimary"
            android:elevation="50dp"
            android:layout_weight="1"
             android:id="@+id/sellingCard"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selling_price"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="50"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimary"
                    android:gravity="end"
                    android:layout_weight="1"
                    android:id="@+id/selling_price"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_margin="8dp"
        android:layout_height="2dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:gravity="center"
        android:visibility="gone"
         android:id="@+id/item_store_note"
         android:text="@string/delete"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/store_num"

            />
        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="50"
            android:layout_weight="1"
            android:background="@drawable/bordersolid"
             android:layout_marginStart="16dp"
            android:elevation="50dp"
            android:inputType="number"
            android:padding="10dp"
            android:textStyle="bold"
             android:id="@+id/store_num"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/avl_q"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordersolid"
            android:layout_marginStart="16dp"
            android:elevation="50dp"
            android:inputType="number"
            android:padding="10dp"
            android:textStyle="bold"
            android:id="@+id/avl_quant"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expire"
            android:layout_weight="1"
            android:id="@+id/expire_date_tv"

            />
        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:background="@drawable/bordersolid"
            android:drawableStart="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:drawableTint="@color/colorPrimaryDark"
            android:typeface="monospace"
            app:allowed_chars="1234567890"
            app:mask="##/##/####"
            android:hint="07042020"
            android:elevation="50dp"
            android:gravity="end"
            android:id="@+id/expire_date"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            app:keep_hint="true"
            />

       <!-- <EditText
            android:id="@+id/expire_date"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/bordersolid"
            android:drawableStart="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:drawableTint="@color/colorPrimaryDark"
            android:elevation="50dp"
            android:gravity="end"
            android:padding="10dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/batch"
            android:layout_weight="1"
            android:id="@+id/batch_num_tv"

            />
        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bordersolid"
            android:layout_marginStart="16dp"
            android:elevation="50dp"
             android:id="@+id/batch_num"
            android:padding="10dp"
            android:textStyle="bold"
            android:drawableTint="@color/colorPrimaryDark"
            android:drawableStart="@drawable/quantum_ic_keyboard_arrow_down_white_36"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_margin="8dp"
        android:layout_height="2dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/count"

        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:elevation="50dp"
             android:id="@+id/sub"
            android:background="@drawable/sub"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="0"
            android:inputType="number"
            android:background="@drawable/bordersolid"
            android:layout_marginStart="16dp"
            android:elevation="50dp"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
             android:id="@+id/count"
            android:selectAllOnFocus="true"

            />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:elevation="50dp"
             android:id="@+id/add"
            android:background="@drawable/plus_action"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:id="@+id/submit"
        android:text="@string/save_data"
         android:layout_margin="8dp"
        android:textColor="@color/white"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:background="@drawable/buttonshape"
        android:backgroundTint="@color/colorPrimary"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>
