<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    card_view:cardUseCompatPadding="true"
    card_view:cardCornerRadius="10dp"
     android:layout_margin="10dp"
    android:id="@+id/card"
    android:layout_marginBottom="20dp"
    android:elevation="50dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_margin="8dp"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:text="@string/item_name"
        android:id="@+id/item_name"
         android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_weight="1"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
             android:layout_weight="1"
            android:gravity="center"

            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/item_id"
                android:gravity="center"
                android:background="@drawable/border"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="11111111111"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"
                android:id="@+id/item_id"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_weight="1"
             android:gravity="center"
            android:orientation="vertical"
             android:layout_marginStart="5dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/item_unit"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@drawable/border"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:text="mmmmmmm"
                android:id="@+id/item_unit"
                android:layout_weight="1"
                android:textColor="@color/colorPrimary"

                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>