<?xml version="1.0" encoding="utf-8"?>
 <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
     android:fillViewport="true"
    android:layout_height="match_parent">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:id="@+id/screen"
    tools:context=".Login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:src="@drawable/logo"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
         android:layout_gravity="center"
        android:visibility="gone"
         android:id="@+id/progress"/>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/card"
        android:layout_marginBottom="20dp"
        android:elevation="50dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_width="40dp"
        android:src="@drawable/company"
        android:padding="5dp"
        android:background="@color/red"
        android:layout_gravity="center"
        android:layout_height="40dp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/org_code"
        android:textStyle="bold"
         android:padding="5dp"
        android:gravity="start"
        android:background="@color/white"
        android:imeOptions="actionDone"
        android:fontFamily="@font/cairo"
        android:id="@+id/org_code"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp"

        android:background="@color/colorPrimary"
        android:id="@+id/card2"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@color/red"
                android:padding="5dp"
                android:src="@drawable/user" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/user_name"
                android:textStyle="bold"
                android:padding="5dp"
                android:imeOptions="actionDone"
                android:gravity="start"

                android:background="@color/white"
                android:fontFamily="@font/cairo"
                android:id="@+id/user_name"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:orientation="horizontal"
        android:layout_width="match_parent"

        card_view:cardUseCompatPadding="true"
        card_view:cardCornerRadius="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/card3"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:src="@drawable/password"
                android:padding="5dp"
                android:background="@color/red"
                android:layout_gravity="center"
                android:layout_height="40dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password"
                android:textStyle="bold"
                android:padding="5dp"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:gravity="start"
                android:background="@color/white"
                android:fontFamily="@font/cairo"
                android:id="@+id/password"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:drawableEnd="@drawable/login_icon"
        android:drawableRight="@drawable/login_icon"
        android:fontFamily="@font/cairo"
        android:paddingEnd="16dp"
        android:elevation="50dp"
        android:paddingStart="16dp"
        android:text="@string/login"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />




</LinearLayout>
</ScrollView>